HH-120026 fix de\registration lifecycle