@@ -1,18 +1,21 @@
 package ru.hh.nab.starter.server.jetty;
 
 import org.eclipse.jetty.util.Loader;
+import org.eclipse.jetty.util.component.LifeCycle;
 import org.eclipse.jetty.webapp.Configuration;
 import org.eclipse.jetty.webapp.WebAppContext;
+import org.slf4j.Logger;
+import org.slf4j.LoggerFactory;
 import ru.hh.nab.starter.servlet.WebAppInitializer;
 
 import java.util.List;
 
 final class JettyWebAppContext extends WebAppContext {
+  private static final Logger LOGGER = LoggerFactory.getLogger(JettyWebAppContext.class);
 
-  JettyWebAppContext(List<WebAppInitializer> webAppInitializer, boolean sessionEnabled) {
-    super(null, null, null, null, null, null,
-        sessionEnabled ? SESSIONS: 0);
-    webAppInitializer.forEach(initializer -> initializer.configureWebApp(this));
+  JettyWebAppContext(List<WebAppInitializer> webAppInitializers, boolean sessionEnabled) {
+    super(null, null, null, null, null, null, sessionEnabled ? SESSIONS: 0);
+    this.addLifeCycleListener(new BeforeStartListener(webAppInitializers));
     setThrowUnavailableOnStartupException(true);
   }
 
@@ -25,8 +28,22 @@ final class JettyWebAppContext extends WebAppContext {
     String[] configurationClassStrings = getConfigurationClasses();
     Configuration[] configurations = new Configuration[configurationClassStrings.length];
     for (int i = 0; i < configurations.length; i++) {
-      configurations[i] = (Configuration)Loader.loadClass(configurationClassStrings[i]).newInstance();
+      configurations[i] = (Configuration)Loader.loadClass(configurationClassStrings[i]).getDeclaredConstructor().newInstance();
     }
     setConfigurations(configurations);
+  }
+
+  private final class BeforeStartListener extends AbstractLifeCycleListener {
+    private final List<WebAppInitializer> initializers;
+
+    private BeforeStartListener(List<WebAppInitializer> initializers) {
+      this.initializers = initializers;
+    }
+
+    @Override
+    public void lifeCycleStarting(LifeCycle event) {
+      LOGGER.debug("Initializing webApp");
+      initializers.forEach(initializer -> initializer.configureWebApp(JettyWebAppContext.this));
+    }
   }
 }
